add: example code

--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,25 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
   min-height: 100vh;
+}
+
+nav ul {
+  display: flex;
+  gap: 1rem;
+  list-style-type:none;  
+  padding-bottom: 4rem;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 1000px;
+  height: 100vh;
+}
+
+main {
+  flex: 1;
 }
 
 h1 {
